# rustmaker

./: .env  .gitignore  Cargo.toml  README.md  config.toml
.sqlx/: query-353dfcdd4c7aec262df8075db55605e3e1d6b5f340e2ee0544846497e970504a.json
src/: commands.rs  config.sample.toml  configuration.rs  indicphone.rs  main.rs  startup.rs  telemetry.rs
src/commands/: config.rs  init.rs  install.rs  new_config.rs  upgrade.rs
tests/: db_ops.rs
