[package]
name = "rustmaker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.3.17", features = ["derive"] }
config = "0.14.0"
include_dir = "0.7.3"
rand = "0.8.5"
regex = "1.8.4"
serde = { version = "1.0.197", features = ["derive"] }
