[package]
name = "rustmaker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.3.17", features = ["derive"] }
config = "0.14.0"
rand = "0.8.5"
rust-embed = "8.4.0"
semver = "1.0.25"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.137"
sqlx = { version = "0.7.4", features = [
    "runtime-tokio-rustls",
    "macros",
    "sqlite",
    "migrate",
    "chrono",
    "json",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "registry",
] }
